Experiment-4/sysy-compiler/sysy.output
Nonterminals useless in grammar

    FuncDef
    FuncType


Terminals unused in grammar

    THEN


Rules useless in grammar

   96 FuncDef: FuncType IDENT LPAREN RPAREN Block
   97        | FuncType IDENT LPAREN FuncFParams RPAREN Block

   98 FuncType: INT
   99         | VOID


State 55 conflicts: 1 shift/reduce
State 59 conflicts: 1 shift/reduce
State 177 conflicts: 1 shift/reduce


Grammar

    0 $accept: CompUnit $end

    1 CompUnit: CompUnits

    2 CompUnits: FuncDefOrVarDecl
    3          | ConstDecl
    4          | CompUnits FuncDefOrVarDecl
    5          | CompUnits ConstDecl
    6          | VOID FuncDef_
    7          | CompUnits VOID FuncDef_

    8 FuncDefOrVarDecl: BType FuncDef_
    9                 | BType VarDecl_

   10 Decl: ConstDecl
   11     | VarDecl

   12 ConstDecl: CONST BType ConstDef SEMI

   13 BType: INT

   14 ConstDef: IDENT ASSIGN ConstInitVal
   15         | IDENT ASSIGN ConstInitVal COMMA ConstDef
   16         | IDENT LBRACKET Bracket RBRACKET ASSIGN ConstInitVal
   17         | IDENT LBRACKET ConstExp RBRACKET ASSIGN ConstInitVal COMMA ConstDef

   18 Bracket: LBRACKET ConstExp RBRACKET
   19        | LBRACKET ConstExp RBRACKET Bracket

   20 ConstInitVal: ConstExp
   21             | LBRACE Brace RBRACE
   22             | LBRACE RBRACE

   23 Brace: ConstInitVal
   24      | ConstInitVal COMMA Brace

   25 ConstExp: Exp
   26         | Exp COMMA ConstExp

   27 VarDecl: BType VarDef SEMI

   28 VarDecl_: VarDef SEMI

   29 VarDef: IDENT
   30       | IDENT ASSIGN InitVal
   31       | IDENT Bracket
   32       | IDENT Bracket ASSIGN InitVal
   33       | IDENT COMMA VarDef
   34       | IDENT ASSIGN InitVal COMMA VarDef
   35       | IDENT Bracket COMMA VarDef
   36       | IDENT Bracket ASSIGN InitVal COMMA VarDef

   37 InitVal: Exp
   38        | LBRACE RBRACE
   39        | LBRACE Brace RBRACE

   40 FuncDef_: IDENT LPAREN RPAREN Block
   41         | IDENT LPAREN FuncFParams RPAREN Block

   42 FuncFParams: FuncFParam

   43 FuncFParam: BType IDENT
   44           | BType IDENT COMMA FuncFParam

   45 Block: LBRACE BlockItem RBRACE

   46 BlockItem: Decl
   47          | Stmt
   48          | Decl BlockItem
   49          | Stmt BlockItem

   50 Stmt: LVal ASSIGN Exp SEMI
   51     | SEMI
   52     | Exp SEMI
   53     | Block
   54     | RETURN SEMI
   55     | RETURN Exp SEMI
   56     | IF LPAREN Exp RPAREN Stmt
   57     | IF LPAREN Exp RPAREN Stmt ELSE Stmt
   58     | WHILE LPAREN Exp RPAREN Stmt
   59     | BREAK SEMI
   60     | CONTINUE SEMI

   61 Exp: LOrExp
   62    | LOrExp COMMA Exp

   63 LVal: IDENT
   64     | IDENT LBRACKET Exp RBRACKET

   65 PrimaryExp: LPAREN Exp RPAREN
   66           | Number
   67           | LVal

   68 Number: INT_CONST

   69 UnaryExp: PrimaryExp
   70         | UnaryOp UnaryExp
   71         | IDENT LPAREN RPAREN
   72         | IDENT LPAREN FuncRParams RPAREN

   73 UnaryOp: ADD
   74        | SUB
   75        | '!'

   76 FuncRParams: Exp

   77 MulExp: UnaryExp
   78       | MulExp MUL UnaryExp
   79       | MulExp DIV UnaryExp
   80       | MulExp MOD UnaryExp

   81 AddExp: MulExp
   82       | AddExp ADD MulExp
   83       | AddExp SUB MulExp

   84 RelExp: AddExp
   85       | RelExp '<' AddExp
   86       | RelExp '>' AddExp
   87       | RelExp LE AddExp
   88       | RelExp GE AddExp

   89 EqExp: RelExp
   90      | EqExp EQ RelExp
   91      | EqExp NE RelExp

   92 LAndExp: EqExp
   93        | LAndExp AND EqExp

   94 LOrExp: LAndExp
   95       | LOrExp OR LAndExp


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 75
    '<' (60) 85
    '>' (62) 86
    error (256)
    IDENT <str_val> (258) 14 15 16 17 29 30 31 32 33 34 35 36 40 41 43 44 63 64 71 72
    INT <str_val> (259) 13
    RETURN <str_val> (260) 54 55
    CONST <str_val> (261) 12
    VOID <str_val> (262) 6 7
    LE <str_val> (263) 87
    GE <str_val> (264) 88
    EQ <str_val> (265) 90
    NE <str_val> (266) 91
    AND <str_val> (267) 93
    OR <str_val> (268) 95
    IF <str_val> (269) 56 57
    THEN <str_val> (270)
    ELSE <str_val> (271) 57
    WHILE <str_val> (272) 58
    CONTINUE <str_val> (273) 60
    BREAK <str_val> (274) 59
    ADD <str_val> (275) 73 82
    SUB <str_val> (276) 74 83
    MUL <str_val> (277) 78
    DIV <str_val> (278) 79
    MOD <str_val> (279) 80
    ASSIGN <str_val> (280) 14 15 16 17 30 32 34 36 50
    SEMI <str_val> (281) 12 27 28 50 51 52 54 55 59 60
    COMMA <str_val> (282) 15 17 24 26 33 34 35 36 44 62
    LPAREN <str_val> (283) 40 41 56 57 58 65 71 72
    RPAREN <str_val> (284) 40 41 56 57 58 65 71 72
    LBRACE <str_val> (285) 21 22 38 39 45
    RBRACE <str_val> (286) 21 22 38 39 45
    LBRACKET <str_val> (287) 16 17 18 19 64
    RBRACKET <str_val> (288) 16 17 18 19 64
    INT_CONST <int_val> (289) 68


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    CompUnit (39)
        on left: 1
        on right: 0
    CompUnits <ast_val> (40)
        on left: 2 3 4 5 6 7
        on right: 1 4 5 7
    FuncDefOrVarDecl <ast_val> (41)
        on left: 8 9
        on right: 2 4
    Decl <ast_val> (42)
        on left: 10 11
        on right: 46 48
    ConstDecl <ast_val> (43)
        on left: 12
        on right: 3 5 10
    BType <ast_val> (44)
        on left: 13
        on right: 8 9 12 27 43 44
    ConstDef <ast_val> (45)
        on left: 14 15 16 17
        on right: 12 15 17
    Bracket <ast_val> (46)
        on left: 18 19
        on right: 16 19 31 32 35 36
    ConstInitVal <ast_val> (47)
        on left: 20 21 22
        on right: 14 15 16 17 23 24
    Brace <ast_val> (48)
        on left: 23 24
        on right: 21 24 39
    ConstExp <ast_val> (49)
        on left: 25 26
        on right: 17 18 19 20 26
    VarDecl <ast_val> (50)
        on left: 27
        on right: 11
    VarDecl_ <ast_val> (51)
        on left: 28
        on right: 9
    VarDef <ast_val> (52)
        on left: 29 30 31 32 33 34 35 36
        on right: 27 28 33 34 35 36
    InitVal <ast_val> (53)
        on left: 37 38 39
        on right: 30 32 34 36
    FuncDef_ <ast_val> (54)
        on left: 40 41
        on right: 6 7 8
    FuncFParams <ast_val> (55)
        on left: 42
        on right: 41
    FuncFParam <ast_val> (56)
        on left: 43 44
        on right: 42 44
    Block <ast_val> (57)
        on left: 45
        on right: 40 41 53
    BlockItem <ast_val> (58)
        on left: 46 47 48 49
        on right: 45 48 49
    Stmt <ast_val> (59)
        on left: 50 51 52 53 54 55 56 57 58 59 60
        on right: 47 49 56 57 58
    Exp <ast_val> (60)
        on left: 61 62
        on right: 25 26 37 50 52 55 56 57 58 62 64 65 76
    LVal <ast_val> (61)
        on left: 63 64
        on right: 50 67
    PrimaryExp <ast_val> (62)
        on left: 65 66 67
        on right: 69
    Number <ast_val> (63)
        on left: 68
        on right: 66
    UnaryExp <ast_val> (64)
        on left: 69 70 71 72
        on right: 70 77 78 79 80
    UnaryOp <str_val> (65)
        on left: 73 74 75
        on right: 70
    FuncRParams <ast_val> (66)
        on left: 76
        on right: 72
    MulExp <ast_val> (67)
        on left: 77 78 79 80
        on right: 78 79 80 81 82 83
    AddExp <ast_val> (68)
        on left: 81 82 83
        on right: 82 83 84 85 86 87 88
    RelExp <ast_val> (69)
        on left: 84 85 86 87 88
        on right: 85 86 87 88 89 90 91
    EqExp <ast_val> (70)
        on left: 89 90 91
        on right: 90 91 92 93
    LAndExp <ast_val> (71)
        on left: 92 93
        on right: 93 94 95
    LOrExp <ast_val> (72)
        on left: 94 95
        on right: 61 62 95


State 0

    0 $accept: . CompUnit $end

    INT    shift, and go to state 1
    CONST  shift, and go to state 2
    VOID   shift, and go to state 3

    CompUnit          go to state 4
    CompUnits         go to state 5
    FuncDefOrVarDecl  go to state 6
    ConstDecl         go to state 7
    BType             go to state 8


State 1

   13 BType: INT .

    $default  reduce using rule 13 (BType)


State 2

   12 ConstDecl: CONST . BType ConstDef SEMI

    INT  shift, and go to state 1

    BType  go to state 9


State 3

    6 CompUnits: VOID . FuncDef_

    IDENT  shift, and go to state 10

    FuncDef_  go to state 11


State 4

    0 $accept: CompUnit . $end

    $end  shift, and go to state 12


State 5

    1 CompUnit: CompUnits .
    4 CompUnits: CompUnits . FuncDefOrVarDecl
    5          | CompUnits . ConstDecl
    7          | CompUnits . VOID FuncDef_

    INT    shift, and go to state 1
    CONST  shift, and go to state 2
    VOID   shift, and go to state 13

    $default  reduce using rule 1 (CompUnit)

    FuncDefOrVarDecl  go to state 14
    ConstDecl         go to state 15
    BType             go to state 8


State 6

    2 CompUnits: FuncDefOrVarDecl .

    $default  reduce using rule 2 (CompUnits)


State 7

    3 CompUnits: ConstDecl .

    $default  reduce using rule 3 (CompUnits)


State 8

    8 FuncDefOrVarDecl: BType . FuncDef_
    9                 | BType . VarDecl_

    IDENT  shift, and go to state 16

    VarDecl_  go to state 17
    VarDef    go to state 18
    FuncDef_  go to state 19


State 9

   12 ConstDecl: CONST BType . ConstDef SEMI

    IDENT  shift, and go to state 20

    ConstDef  go to state 21


State 10

   40 FuncDef_: IDENT . LPAREN RPAREN Block
   41         | IDENT . LPAREN FuncFParams RPAREN Block

    LPAREN  shift, and go to state 22


State 11

    6 CompUnits: VOID FuncDef_ .

    $default  reduce using rule 6 (CompUnits)


State 12

    0 $accept: CompUnit $end .

    $default  accept


State 13

    7 CompUnits: CompUnits VOID . FuncDef_

    IDENT  shift, and go to state 10

    FuncDef_  go to state 23


State 14

    4 CompUnits: CompUnits FuncDefOrVarDecl .

    $default  reduce using rule 4 (CompUnits)


State 15

    5 CompUnits: CompUnits ConstDecl .

    $default  reduce using rule 5 (CompUnits)


State 16

   29 VarDef: IDENT .
   30       | IDENT . ASSIGN InitVal
   31       | IDENT . Bracket
   32       | IDENT . Bracket ASSIGN InitVal
   33       | IDENT . COMMA VarDef
   34       | IDENT . ASSIGN InitVal COMMA VarDef
   35       | IDENT . Bracket COMMA VarDef
   36       | IDENT . Bracket ASSIGN InitVal COMMA VarDef
   40 FuncDef_: IDENT . LPAREN RPAREN Block
   41         | IDENT . LPAREN FuncFParams RPAREN Block

    ASSIGN    shift, and go to state 24
    COMMA     shift, and go to state 25
    LPAREN    shift, and go to state 22
    LBRACKET  shift, and go to state 26

    $default  reduce using rule 29 (VarDef)

    Bracket  go to state 27


State 17

    9 FuncDefOrVarDecl: BType VarDecl_ .

    $default  reduce using rule 9 (FuncDefOrVarDecl)


State 18

   28 VarDecl_: VarDef . SEMI

    SEMI  shift, and go to state 28


State 19

    8 FuncDefOrVarDecl: BType FuncDef_ .

    $default  reduce using rule 8 (FuncDefOrVarDecl)


State 20

   14 ConstDef: IDENT . ASSIGN ConstInitVal
   15         | IDENT . ASSIGN ConstInitVal COMMA ConstDef
   16         | IDENT . LBRACKET Bracket RBRACKET ASSIGN ConstInitVal
   17         | IDENT . LBRACKET ConstExp RBRACKET ASSIGN ConstInitVal COMMA ConstDef

    ASSIGN    shift, and go to state 29
    LBRACKET  shift, and go to state 30


State 21

   12 ConstDecl: CONST BType ConstDef . SEMI

    SEMI  shift, and go to state 31


State 22

   40 FuncDef_: IDENT LPAREN . RPAREN Block
   41         | IDENT LPAREN . FuncFParams RPAREN Block

    INT     shift, and go to state 1
    RPAREN  shift, and go to state 32

    BType        go to state 33
    FuncFParams  go to state 34
    FuncFParam   go to state 35


State 23

    7 CompUnits: CompUnits VOID FuncDef_ .

    $default  reduce using rule 7 (CompUnits)


State 24

   30 VarDef: IDENT ASSIGN . InitVal
   34       | IDENT ASSIGN . InitVal COMMA VarDef

    IDENT      shift, and go to state 36
    ADD        shift, and go to state 37
    SUB        shift, and go to state 38
    LPAREN     shift, and go to state 39
    LBRACE     shift, and go to state 40
    INT_CONST  shift, and go to state 41
    '!'        shift, and go to state 42

    InitVal     go to state 43
    Exp         go to state 44
    LVal        go to state 45
    PrimaryExp  go to state 46
    Number      go to state 47
    UnaryExp    go to state 48
    UnaryOp     go to state 49
    MulExp      go to state 50
    AddExp      go to state 51
    RelExp      go to state 52
    EqExp       go to state 53
    LAndExp     go to state 54
    LOrExp      go to state 55


State 25

   33 VarDef: IDENT COMMA . VarDef

    IDENT  shift, and go to state 56

    VarDef  go to state 57


State 26

   18 Bracket: LBRACKET . ConstExp RBRACKET
   19        | LBRACKET . ConstExp RBRACKET Bracket

    IDENT      shift, and go to state 36
    ADD        shift, and go to state 37
    SUB        shift, and go to state 38
    LPAREN     shift, and go to state 39
    INT_CONST  shift, and go to state 41
    '!'        shift, and go to state 42

    ConstExp    go to state 58
    Exp         go to state 59
    LVal        go to state 45
    PrimaryExp  go to state 46
    Number      go to state 47
    UnaryExp    go to state 48
    UnaryOp     go to state 49
    MulExp      go to state 50
    AddExp      go to state 51
    RelExp      go to state 52
    EqExp       go to state 53
    LAndExp     go to state 54
    LOrExp      go to state 55


State 27

   31 VarDef: IDENT Bracket .
   32       | IDENT Bracket . ASSIGN InitVal
   35       | IDENT Bracket . COMMA VarDef
   36       | IDENT Bracket . ASSIGN InitVal COMMA VarDef

    ASSIGN  shift, and go to state 60
    COMMA   shift, and go to state 61

    $default  reduce using rule 31 (VarDef)


State 28

   28 VarDecl_: VarDef SEMI .

    $default  reduce using rule 28 (VarDecl_)


State 29

   14 ConstDef: IDENT ASSIGN . ConstInitVal
   15         | IDENT ASSIGN . ConstInitVal COMMA ConstDef

    IDENT      shift, and go to state 36
    ADD        shift, and go to state 37
    SUB        shift, and go to state 38
    LPAREN     shift, and go to state 39
    LBRACE     shift, and go to state 62
    INT_CONST  shift, and go to state 41
    '!'        shift, and go to state 42

    ConstInitVal  go to state 63
    ConstExp      go to state 64
    Exp           go to state 59
    LVal          go to state 45
    PrimaryExp    go to state 46
    Number        go to state 47
    UnaryExp      go to state 48
    UnaryOp       go to state 49
    MulExp        go to state 50
    AddExp        go to state 51
    RelExp        go to state 52
    EqExp         go to state 53
    LAndExp       go to state 54
    LOrExp        go to state 55


State 30

   16 ConstDef: IDENT LBRACKET . Bracket RBRACKET ASSIGN ConstInitVal
   17         | IDENT LBRACKET . ConstExp RBRACKET ASSIGN ConstInitVal COMMA ConstDef

    IDENT      shift, and go to state 36
    ADD        shift, and go to state 37
    SUB        shift, and go to state 38
    LPAREN     shift, and go to state 39
    LBRACKET   shift, and go to state 26
    INT_CONST  shift, and go to state 41
    '!'        shift, and go to state 42

    Bracket     go to state 65
    ConstExp    go to state 66
    Exp         go to state 59
    LVal        go to state 45
    PrimaryExp  go to state 46
    Number      go to state 47
    UnaryExp    go to state 48
    UnaryOp     go to state 49
    MulExp      go to state 50
    AddExp      go to state 51
    RelExp      go to state 52
    EqExp       go to state 53
    LAndExp     go to state 54
    LOrExp      go to state 55


State 31

   12 ConstDecl: CONST BType ConstDef SEMI .

    $default  reduce using rule 12 (ConstDecl)


State 32

   40 FuncDef_: IDENT LPAREN RPAREN . Block

    LBRACE  shift, and go to state 67

    Block  go to state 68


State 33

   43 FuncFParam: BType . IDENT
   44           | BType . IDENT COMMA FuncFParam

    IDENT  shift, and go to state 69


State 34

   41 FuncDef_: IDENT LPAREN FuncFParams . RPAREN Block

    RPAREN  shift, and go to state 70


State 35

   42 FuncFParams: FuncFParam .

    $default  reduce using rule 42 (FuncFParams)


State 36

   63 LVal: IDENT .
   64     | IDENT . LBRACKET Exp RBRACKET
   71 UnaryExp: IDENT . LPAREN RPAREN
   72         | IDENT . LPAREN FuncRParams RPAREN

    LPAREN    shift, and go to state 71
    LBRACKET  shift, and go to state 72

    $default  reduce using rule 63 (LVal)


State 37

   73 UnaryOp: ADD .

    $default  reduce using rule 73 (UnaryOp)


State 38

   74 UnaryOp: SUB .

    $default  reduce using rule 74 (UnaryOp)


State 39

   65 PrimaryExp: LPAREN . Exp RPAREN

    IDENT      shift, and go to state 36
    ADD        shift, and go to state 37
    SUB        shift, and go to state 38
    LPAREN     shift, and go to state 39
    INT_CONST  shift, and go to state 41
    '!'        shift, and go to state 42

    Exp         go to state 73
    LVal        go to state 45
    PrimaryExp  go to state 46
    Number      go to state 47
    UnaryExp    go to state 48
    UnaryOp     go to state 49
    MulExp      go to state 50
    AddExp      go to state 51
    RelExp      go to state 52
    EqExp       go to state 53
    LAndExp     go to state 54
    LOrExp      go to state 55


State 40

   38 InitVal: LBRACE . RBRACE
   39        | LBRACE . Brace RBRACE

    IDENT      shift, and go to state 36
    ADD        shift, and go to state 37
    SUB        shift, and go to state 38
    LPAREN     shift, and go to state 39
    LBRACE     shift, and go to state 62
    RBRACE     shift, and go to state 74
    INT_CONST  shift, and go to state 41
    '!'        shift, and go to state 42

    ConstInitVal  go to state 75
    Brace         go to state 76
    ConstExp      go to state 64
    Exp           go to state 59
    LVal          go to state 45
    PrimaryExp    go to state 46
    Number        go to state 47
    UnaryExp      go to state 48
    UnaryOp       go to state 49
    MulExp        go to state 50
    AddExp        go to state 51
    RelExp        go to state 52
    EqExp         go to state 53
    LAndExp       go to state 54
    LOrExp        go to state 55


State 41

   68 Number: INT_CONST .

    $default  reduce using rule 68 (Number)


State 42

   75 UnaryOp: '!' .

    $default  reduce using rule 75 (UnaryOp)


State 43

   30 VarDef: IDENT ASSIGN InitVal .
   34       | IDENT ASSIGN InitVal . COMMA VarDef

    COMMA  shift, and go to state 77

    $default  reduce using rule 30 (VarDef)


State 44

   37 InitVal: Exp .

    $default  reduce using rule 37 (InitVal)


State 45

   67 PrimaryExp: LVal .

    $default  reduce using rule 67 (PrimaryExp)


State 46

   69 UnaryExp: PrimaryExp .

    $default  reduce using rule 69 (UnaryExp)


State 47

   66 PrimaryExp: Number .

    $default  reduce using rule 66 (PrimaryExp)


State 48

   77 MulExp: UnaryExp .

    $default  reduce using rule 77 (MulExp)


State 49

   70 UnaryExp: UnaryOp . UnaryExp

    IDENT      shift, and go to state 36
    ADD        shift, and go to state 37
    SUB        shift, and go to state 38
    LPAREN     shift, and go to state 39
    INT_CONST  shift, and go to state 41
    '!'        shift, and go to state 42

    LVal        go to state 45
    PrimaryExp  go to state 46
    Number      go to state 47
    UnaryExp    go to state 78
    UnaryOp     go to state 49


State 50

   78 MulExp: MulExp . MUL UnaryExp
   79       | MulExp . DIV UnaryExp
   80       | MulExp . MOD UnaryExp
   81 AddExp: MulExp .

    MUL  shift, and go to state 79
    DIV  shift, and go to state 80
    MOD  shift, and go to state 81

    $default  reduce using rule 81 (AddExp)


State 51

   82 AddExp: AddExp . ADD MulExp
   83       | AddExp . SUB MulExp
   84 RelExp: AddExp .

    ADD  shift, and go to state 82
    SUB  shift, and go to state 83

    $default  reduce using rule 84 (RelExp)


State 52

   85 RelExp: RelExp . '<' AddExp
   86       | RelExp . '>' AddExp
   87       | RelExp . LE AddExp
   88       | RelExp . GE AddExp
   89 EqExp: RelExp .

    LE   shift, and go to state 84
    GE   shift, and go to state 85
    '<'  shift, and go to state 86
    '>'  shift, and go to state 87

    $default  reduce using rule 89 (EqExp)


State 53

   90 EqExp: EqExp . EQ RelExp
   91      | EqExp . NE RelExp
   92 LAndExp: EqExp .

    EQ  shift, and go to state 88
    NE  shift, and go to state 89

    $default  reduce using rule 92 (LAndExp)


State 54

   93 LAndExp: LAndExp . AND EqExp
   94 LOrExp: LAndExp .

    AND  shift, and go to state 90

    $default  reduce using rule 94 (LOrExp)


State 55

   61 Exp: LOrExp .
   62    | LOrExp . COMMA Exp
   95 LOrExp: LOrExp . OR LAndExp

    OR     shift, and go to state 91
    COMMA  shift, and go to state 92

    COMMA     [reduce using rule 61 (Exp)]
    $default  reduce using rule 61 (Exp)


State 56

   29 VarDef: IDENT .
   30       | IDENT . ASSIGN InitVal
   31       | IDENT . Bracket
   32       | IDENT . Bracket ASSIGN InitVal
   33       | IDENT . COMMA VarDef
   34       | IDENT . ASSIGN InitVal COMMA VarDef
   35       | IDENT . Bracket COMMA VarDef
   36       | IDENT . Bracket ASSIGN InitVal COMMA VarDef

    ASSIGN    shift, and go to state 24
    COMMA     shift, and go to state 25
    LBRACKET  shift, and go to state 26

    $default  reduce using rule 29 (VarDef)

    Bracket  go to state 27


State 57

   33 VarDef: IDENT COMMA VarDef .

    $default  reduce using rule 33 (VarDef)


State 58

   18 Bracket: LBRACKET ConstExp . RBRACKET
   19        | LBRACKET ConstExp . RBRACKET Bracket

    RBRACKET  shift, and go to state 93


State 59

   25 ConstExp: Exp .
   26         | Exp . COMMA ConstExp

    COMMA  shift, and go to state 94

    COMMA     [reduce using rule 25 (ConstExp)]
    $default  reduce using rule 25 (ConstExp)


State 60

   32 VarDef: IDENT Bracket ASSIGN . InitVal
   36       | IDENT Bracket ASSIGN . InitVal COMMA VarDef

    IDENT      shift, and go to state 36
    ADD        shift, and go to state 37
    SUB        shift, and go to state 38
    LPAREN     shift, and go to state 39
    LBRACE     shift, and go to state 40
    INT_CONST  shift, and go to state 41
    '!'        shift, and go to state 42

    InitVal     go to state 95
    Exp         go to state 44
    LVal        go to state 45
    PrimaryExp  go to state 46
    Number      go to state 47
    UnaryExp    go to state 48
    UnaryOp     go to state 49
    MulExp      go to state 50
    AddExp      go to state 51
    RelExp      go to state 52
    EqExp       go to state 53
    LAndExp     go to state 54
    LOrExp      go to state 55


State 61

   35 VarDef: IDENT Bracket COMMA . VarDef

    IDENT  shift, and go to state 56

    VarDef  go to state 96


State 62

   21 ConstInitVal: LBRACE . Brace RBRACE
   22             | LBRACE . RBRACE

    IDENT      shift, and go to state 36
    ADD        shift, and go to state 37
    SUB        shift, and go to state 38
    LPAREN     shift, and go to state 39
    LBRACE     shift, and go to state 62
    RBRACE     shift, and go to state 97
    INT_CONST  shift, and go to state 41
    '!'        shift, and go to state 42

    ConstInitVal  go to state 75
    Brace         go to state 98
    ConstExp      go to state 64
    Exp           go to state 59
    LVal          go to state 45
    PrimaryExp    go to state 46
    Number        go to state 47
    UnaryExp      go to state 48
    UnaryOp       go to state 49
    MulExp        go to state 50
    AddExp        go to state 51
    RelExp        go to state 52
    EqExp         go to state 53
    LAndExp       go to state 54
    LOrExp        go to state 55


State 63

   14 ConstDef: IDENT ASSIGN ConstInitVal .
   15         | IDENT ASSIGN ConstInitVal . COMMA ConstDef

    COMMA  shift, and go to state 99

    $default  reduce using rule 14 (ConstDef)


State 64

   20 ConstInitVal: ConstExp .

    $default  reduce using rule 20 (ConstInitVal)


State 65

   16 ConstDef: IDENT LBRACKET Bracket . RBRACKET ASSIGN ConstInitVal

    RBRACKET  shift, and go to state 100


State 66

   17 ConstDef: IDENT LBRACKET ConstExp . RBRACKET ASSIGN ConstInitVal COMMA ConstDef

    RBRACKET  shift, and go to state 101


State 67

   45 Block: LBRACE . BlockItem RBRACE

    IDENT      shift, and go to state 36
    INT        shift, and go to state 1
    RETURN     shift, and go to state 102
    CONST      shift, and go to state 2
    IF         shift, and go to state 103
    WHILE      shift, and go to state 104
    CONTINUE   shift, and go to state 105
    BREAK      shift, and go to state 106
    ADD        shift, and go to state 37
    SUB        shift, and go to state 38
    SEMI       shift, and go to state 107
    LPAREN     shift, and go to state 39
    LBRACE     shift, and go to state 67
    INT_CONST  shift, and go to state 41
    '!'        shift, and go to state 42

    Decl        go to state 108
    ConstDecl   go to state 109
    BType       go to state 110
    VarDecl     go to state 111
    Block       go to state 112
    BlockItem   go to state 113
    Stmt        go to state 114
    Exp         go to state 115
    LVal        go to state 116
    PrimaryExp  go to state 46
    Number      go to state 47
    UnaryExp    go to state 48
    UnaryOp     go to state 49
    MulExp      go to state 50
    AddExp      go to state 51
    RelExp      go to state 52
    EqExp       go to state 53
    LAndExp     go to state 54
    LOrExp      go to state 55


State 68

   40 FuncDef_: IDENT LPAREN RPAREN Block .

    $default  reduce using rule 40 (FuncDef_)


State 69

   43 FuncFParam: BType IDENT .
   44           | BType IDENT . COMMA FuncFParam

    COMMA  shift, and go to state 117

    $default  reduce using rule 43 (FuncFParam)


State 70

   41 FuncDef_: IDENT LPAREN FuncFParams RPAREN . Block

    LBRACE  shift, and go to state 67

    Block  go to state 118


State 71

   71 UnaryExp: IDENT LPAREN . RPAREN
   72         | IDENT LPAREN . FuncRParams RPAREN

    IDENT      shift, and go to state 36
    ADD        shift, and go to state 37
    SUB        shift, and go to state 38
    LPAREN     shift, and go to state 39
    RPAREN     shift, and go to state 119
    INT_CONST  shift, and go to state 41
    '!'        shift, and go to state 42

    Exp          go to state 120
    LVal         go to state 45
    PrimaryExp   go to state 46
    Number       go to state 47
    UnaryExp     go to state 48
    UnaryOp      go to state 49
    FuncRParams  go to state 121
    MulExp       go to state 50
    AddExp       go to state 51
    RelExp       go to state 52
    EqExp        go to state 53
    LAndExp      go to state 54
    LOrExp       go to state 55


State 72

   64 LVal: IDENT LBRACKET . Exp RBRACKET

    IDENT      shift, and go to state 36
    ADD        shift, and go to state 37
    SUB        shift, and go to state 38
    LPAREN     shift, and go to state 39
    INT_CONST  shift, and go to state 41
    '!'        shift, and go to state 42

    Exp         go to state 122
    LVal        go to state 45
    PrimaryExp  go to state 46
    Number      go to state 47
    UnaryExp    go to state 48
    UnaryOp     go to state 49
    MulExp      go to state 50
    AddExp      go to state 51
    RelExp      go to state 52
    EqExp       go to state 53
    LAndExp     go to state 54
    LOrExp      go to state 55


State 73

   65 PrimaryExp: LPAREN Exp . RPAREN

    RPAREN  shift, and go to state 123


State 74

   38 InitVal: LBRACE RBRACE .

    $default  reduce using rule 38 (InitVal)


State 75

   23 Brace: ConstInitVal .
   24      | ConstInitVal . COMMA Brace

    COMMA  shift, and go to state 124

    $default  reduce using rule 23 (Brace)


State 76

   39 InitVal: LBRACE Brace . RBRACE

    RBRACE  shift, and go to state 125


State 77

   34 VarDef: IDENT ASSIGN InitVal COMMA . VarDef

    IDENT  shift, and go to state 56

    VarDef  go to state 126


State 78

   70 UnaryExp: UnaryOp UnaryExp .

    $default  reduce using rule 70 (UnaryExp)


State 79

   78 MulExp: MulExp MUL . UnaryExp

    IDENT      shift, and go to state 36
    ADD        shift, and go to state 37
    SUB        shift, and go to state 38
    LPAREN     shift, and go to state 39
    INT_CONST  shift, and go to state 41
    '!'        shift, and go to state 42

    LVal        go to state 45
    PrimaryExp  go to state 46
    Number      go to state 47
    UnaryExp    go to state 127
    UnaryOp     go to state 49


State 80

   79 MulExp: MulExp DIV . UnaryExp

    IDENT      shift, and go to state 36
    ADD        shift, and go to state 37
    SUB        shift, and go to state 38
    LPAREN     shift, and go to state 39
    INT_CONST  shift, and go to state 41
    '!'        shift, and go to state 42

    LVal        go to state 45
    PrimaryExp  go to state 46
    Number      go to state 47
    UnaryExp    go to state 128
    UnaryOp     go to state 49


State 81

   80 MulExp: MulExp MOD . UnaryExp

    IDENT      shift, and go to state 36
    ADD        shift, and go to state 37
    SUB        shift, and go to state 38
    LPAREN     shift, and go to state 39
    INT_CONST  shift, and go to state 41
    '!'        shift, and go to state 42

    LVal        go to state 45
    PrimaryExp  go to state 46
    Number      go to state 47
    UnaryExp    go to state 129
    UnaryOp     go to state 49


State 82

   82 AddExp: AddExp ADD . MulExp

    IDENT      shift, and go to state 36
    ADD        shift, and go to state 37
    SUB        shift, and go to state 38
    LPAREN     shift, and go to state 39
    INT_CONST  shift, and go to state 41
    '!'        shift, and go to state 42

    LVal        go to state 45
    PrimaryExp  go to state 46
    Number      go to state 47
    UnaryExp    go to state 48
    UnaryOp     go to state 49
    MulExp      go to state 130


State 83

   83 AddExp: AddExp SUB . MulExp

    IDENT      shift, and go to state 36
    ADD        shift, and go to state 37
    SUB        shift, and go to state 38
    LPAREN     shift, and go to state 39
    INT_CONST  shift, and go to state 41
    '!'        shift, and go to state 42

    LVal        go to state 45
    PrimaryExp  go to state 46
    Number      go to state 47
    UnaryExp    go to state 48
    UnaryOp     go to state 49
    MulExp      go to state 131


State 84

   87 RelExp: RelExp LE . AddExp

    IDENT      shift, and go to state 36
    ADD        shift, and go to state 37
    SUB        shift, and go to state 38
    LPAREN     shift, and go to state 39
    INT_CONST  shift, and go to state 41
    '!'        shift, and go to state 42

    LVal        go to state 45
    PrimaryExp  go to state 46
    Number      go to state 47
    UnaryExp    go to state 48
    UnaryOp     go to state 49
    MulExp      go to state 50
    AddExp      go to state 132


State 85

   88 RelExp: RelExp GE . AddExp

    IDENT      shift, and go to state 36
    ADD        shift, and go to state 37
    SUB        shift, and go to state 38
    LPAREN     shift, and go to state 39
    INT_CONST  shift, and go to state 41
    '!'        shift, and go to state 42

    LVal        go to state 45
    PrimaryExp  go to state 46
    Number      go to state 47
    UnaryExp    go to state 48
    UnaryOp     go to state 49
    MulExp      go to state 50
    AddExp      go to state 133


State 86

   85 RelExp: RelExp '<' . AddExp

    IDENT      shift, and go to state 36
    ADD        shift, and go to state 37
    SUB        shift, and go to state 38
    LPAREN     shift, and go to state 39
    INT_CONST  shift, and go to state 41
    '!'        shift, and go to state 42

    LVal        go to state 45
    PrimaryExp  go to state 46
    Number      go to state 47
    UnaryExp    go to state 48
    UnaryOp     go to state 49
    MulExp      go to state 50
    AddExp      go to state 134


State 87

   86 RelExp: RelExp '>' . AddExp

    IDENT      shift, and go to state 36
    ADD        shift, and go to state 37
    SUB        shift, and go to state 38
    LPAREN     shift, and go to state 39
    INT_CONST  shift, and go to state 41
    '!'        shift, and go to state 42
